--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             color: white;
             border-radius: 5px;
             cursor: pointer;
+            margin: 5px;
         }
         button:hover {
             background-color: #0056b3;
@@ -38,8 +39,10 @@
 <body>
     <div class="container">
         <h1>Mini App</h1>
-        <p>Ваш баланс: <span id="balance">0</span> токенов</p>
-        <button id="claim-button">Собрать 10 токенов</button>
+        <p>Теперь у тебя <span id="total-balance">0</span> токенов</p>
+        <p>Доступно для сбора: <span id="balance">0</span> токенов</p>
+        <button id="claim-button">Claim</button>
+        <button id="ranking-button">Рейтинг</button>
     </div>
     <script>
         // Функция для отправки данных в бот
@@ -47,9 +50,20 @@
             Telegram.WebApp.sendData(JSON.stringify(data));
         };
 
-        // Обработчик кнопки "Собрать токены"
+        // Функция для обновления интерфейса
+        const updateBalance = (balance, totalBalance) => {
+            document.getElementById("balance").textContent = balance;
+            document.getElementById("total-balance").textContent = totalBalance;
+        };
+
+        // Обработчик кнопки "Claim"
         document.getElementById("claim-button").addEventListener("click", () => {
-            sendDataToBot({ action: "claim_tokens", amount: 10 });
+            sendDataToBot({ action: "claim_tokens" });
+        });
+
+        // Обработчик кнопки "Рейтинг"
+        document.getElementById("ranking-button").addEventListener("click", () => {
+            Telegram.WebApp.openLink("https://t.me/your_bot_username?start=ranking");  // Замените на команду для рейтинга
         });
 
         // Получение баланса при загрузке Mini App
@@ -59,9 +73,14 @@
         Telegram.WebApp.onEvent("message", (message) => {
             const data = JSON.parse(message);
             if (data.action === "update_balance") {
-                document.getElementById("balance").textContent = data.balance;
+                updateBalance(data.balance, data.total_balance);
             }
         });
+
+        // Автоматическое обновление баланса каждые 3 секунды
+        setInterval(() => {
+            sendDataToBot({ action: "get_balance" });
+        }, 3000);
     </script>
 </body>
 </html>
