--- a/index.html
+++ b/index.html
@@ -45,45 +45,51 @@
         <button id="ranking-button">Рейтинг</button>
     </div>
     <script>
-        // Инициализация Telegram Web App
-        Telegram.WebApp.ready();
+        // Проверка, что Mini App запущен внутри Telegram
+        if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
+            // Инициализация Telegram Web App
+            Telegram.WebApp.ready();
 
-        // Функция для отправки данных в бот
-        const sendDataToBot = (data) => {
-            Telegram.WebApp.sendData(JSON.stringify(data));
-        };
+            // Функция для отправки данных в бот
+            const sendDataToBot = (data) => {
+                Telegram.WebApp.sendData(JSON.stringify(data));
+            };
 
-        // Функция для обновления интерфейса
-        const updateBalance = (balance, totalBalance) => {
-            document.getElementById("balance").textContent = balance;
-            document.getElementById("total-balance").textContent = totalBalance;
-        };
+            // Функция для обновления интерфейса
+            const updateBalance = (balance, totalBalance) => {
+                document.getElementById("balance").textContent = balance;
+                document.getElementById("total-balance").textContent = totalBalance;
+            };
 
-        // Обработчик кнопки "Claim"
-        document.getElementById("claim-button").addEventListener("click", () => {
-            sendDataToBot({ action: "claim_tokens" });
-        });
+            // Обработчик кнопки "Claim"
+            document.getElementById("claim-button").addEventListener("click", () => {
+                sendDataToBot({ action: "claim_tokens" });
+            });
 
-        // Обработчик кнопки "Рейтинг"
-        document.getElementById("ranking-button").addEventListener("click", () => {
-            Telegram.WebApp.openLink("https://t.me/your_bot_username?start=ranking");  // Замените на команду для рейтинга
-        });
+            // Обработчик кнопки "Рейтинг"
+            document.getElementById("ranking-button").addEventListener("click", () => {
+                Telegram.WebApp.openLink("https://t.me/your_bot_username?start=ranking");  // Замените на команду для рейтинга
+            });
 
-        // Получение баланса при загрузке Mini App
-        sendDataToBot({ action: "get_balance" });
-
-        // Обработка сообщений от бота
-        Telegram.WebApp.onEvent("message", (message) => {
-            const data = JSON.parse(message);
-            if (data.action === "update_balance") {
-                updateBalance(data.balance, data.total_balance);
-            }
-        });
-
-        // Автоматическое обновление баланса каждые 3 секунды
-        setInterval(() => {
+            // Получение баланса при загрузке Mini App
             sendDataToBot({ action: "get_balance" });
-        }, 3000);
+
+            // Обработка сообщений от бота
+            Telegram.WebApp.onEvent("message", (message) => {
+                const data = JSON.parse(message);
+                if (data.action === "update_balance") {
+                    updateBalance(data.balance, data.total_balance);
+                }
+            });
+
+            // Автоматическое обновление баланса каждые 3 секунды
+            setInterval(() => {
+                sendDataToBot({ action: "get_balance" });
+            }, 3000);
+        } else {
+            // Если Mini App запущен вне Telegram
+            alert("Этот Mini App работает только внутри Telegram. Откройте его через бота.");
+        }
     </script>
 </body>
 </html>
